[package]
name = "rcstruct"
version = "0.1.0"
description = "Generate transparent `Struct(Rc<RefCell<Struct>>)` newtypes"
authors = ["Felix Rabe <felix@rabe.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/felixrabe/rcstruct"

[lib]
proc-macro = true

[dependencies]
