[package]
name = "rcstruct"
version = "0.1.5"
publish = false
description = "Generate transparent `Struct(Rc<RefCell<Struct>>)` newtypes"
authors = ["Felix Rabe <felix@rabe.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/felixrabe/rcstruct"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4.30"
quote = "0.6.12"
syn = { version = "0.15.34", features = ["full"]}
